Fixed whitespace issues in CSS file.

--- a/telehex/static/css/styles.css
+++ b/telehex/static/css/styles.css
@@ -6,8 +6,7 @@
  * Navy:    #263544
 */
 
-html,
-body{
+html, body {
     background: url('../img/bg.png') repeat #263544;
     color: white;
     height: 100%;
@@ -15,28 +14,24 @@ body{
 
 table, tr, td { height: 100%; }
 
-
-#wrap 
-{
-        min-height: 100%;
-        height: auto !important;
-        height: 100%;
-        margin: 0 auto -30px;
+#wrap {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -30px;
 }
 
-#push,
-#footer {
+#push, #footer {
     height: 60px;
 }
 
-#footerlogo
-{
+#footerlogo {
     text-align: center;
 }
 
 /* Homepage styles */
 
-#headerbar{
+#headerbar {
     height:72px;
     background-color:#292929;
     -moz-box-shadow: 0px -5px 8px #b1900b;
@@ -44,13 +39,13 @@ table, tr, td { height: 100%; }
     box-shadow: 0px -5px 8px #b1900b;
 }
 
-#headerlogo{
+#headerlogo {
     position:absolute;
     left:10px;
     top:10px;
 }
 
-#inoutbutton{
+#inoutbutton {
     position:absolute;
     top:15px;
     right:10px;
@@ -60,17 +55,17 @@ table, tr, td { height: 100%; }
     margin-left: 20px;
 }
 
-#searchtext{
+#searchtext {
     height:40px;
     font-size:20px;
     margin-bottom: 10px;
 }
 
-#searchbutton{
+#searchbutton {
     width:100%;
 }
 
-#mainsearchform{
+#mainsearchform {
     margin-top: 200px;
 }
 
@@ -94,8 +89,7 @@ table, tr, td { height: 100%; }
 
 /* Show information page styles */
 
-.hex-im, .hex-im-error
-{
+.hex-im, .hex-im-error {
     margin: auto;
 }
 
@@ -116,24 +110,24 @@ table, tr, td { height: 100%; }
     opacity: 0.8;
 }
 
-#showtitle{
+#showtitle {
     color: #ecf0f1;
     font-size: 60px;
 }
 
-#showline{
+#showline {
     background-color:#ecf0f1;
 }
 
-#showdescription{
+#showdescription {
     color: #ecf0f1;
 }
 
-.seasonheading{
+.seasonheading {
     background-color: #c0392b !important;
 }
 
-.seasonpanel, .seasontable{
+.seasonpanel, .seasontable {
     background-color: transparent !important;
 }
 
@@ -198,20 +192,16 @@ th.headerSortDown:before {
 
 /* End show information page styles */
 
-
-.hover
-{
+.hover {
     opacity: 0.2;
     -webkit-filter: blur(3px); 
 }
 
-.hex-im-cont
-{
+.hex-im-cont {
     position: relative;
 }
 
-.days-left
-{
+.days-left {
     position: absolute;
     top: 40%;
     text-align: center;
@@ -235,46 +225,45 @@ th.headerSortDown:before {
 }
 
 /* Bar Chart Styles */
-.charts .graph{
+.charts .graph {
     margin:auto;
     padding-bottom:70px !important;
     width:960px;
 }
 
-rect:hover{
+rect:hover {
     fill: #2986b9;
 }
 
-.axis path,
-.axis line {
+.axis path, .axis line {
     fill: none;
     stroke: #2986b9;
-	stroke-width:2px;
+    stroke-width:2px;
     shape-rendering: crispEdges;
 }
 
 .axis text {
     font-family: sans-serif;
     font-size: 14px;
-	fill: #2986b9;
+    fill: #2986b9;
 }
 
-.x.label, .y.label{
+.x.label, .y.label {
     font-family: sans-serif;
     font-size: 14px;
-	fill: white;
+    fill: white;
 }
 
-.title.label{
+.title.label {
     font-family: sans-serif;
     font-size: 25px;
-	fill: white;
+    fill: white;
 }
 
-.noratings.label{
+.noratings.label {
     font-family: sans-serif;
     font-size: 25px;
-	fill: #2986b9;
+    fill: #2986b9;
 }
 
 .d3-tip {
